fixes unnecessary scrollbars

--- a/src/routes/PrimaryLayout/components/TopNav/TopNavDropdown/TopNavDropdown.scss
+++ b/src/routes/PrimaryLayout/components/TopNav/TopNavDropdown/TopNavDropdown.scss
@@ -62,5 +62,5 @@ $dropdown-width: 375px;
 
 .body {
   height: 420px;
-  overflow: scroll;
+  overflow: auto;
 }
